--- a/data-analysis/pandas.html
+++ b/data-analysis/pandas.html
@@ -6,6 +6,7 @@
   <title>Hacktrix - Mastering Pandas</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -1518,7 +1519,8 @@ print(df)</code></pre>
 <footer class="footer">
 <p> 2024 Hacktrix. All rights reserved.</p>
 </footer>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>  <!-- Highlight.js initialization -->
 <script src="script.js"></script>
 
 </body>
