--- a/data-analysis/pyspark.html
+++ b/data-analysis/pyspark.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -1430,7 +1429,8 @@ query.awaitTermination()</code></pre>
   </section>
   
   </main>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>  <!-- Highlight.js initialization -->
   <script src="script.js"></script>
   <div class="footer">
     <p>© 2024 LuckyByte. All rights reserved.</p>
