--- a/data-analysis/numpy.html
+++ b/data-analysis/numpy.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NumPy Tutorial - A Comprehensive Guide to Mastering Numerical Computing in Python</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
