--- a/python/interview.html
+++ b/python/interview.html
@@ -203,14 +203,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#python">Python</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#sql">SQL</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#java">Java</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#gcp">GCP</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#articles">Articles</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li><a href="#about" class="nav-link">Home</a></li>
+                    <li><a href="#exercise" class="nav-link">Practice</a></li>
+                    <li><a href="#project" class="nav-link">Project</a></li>
+                    <li><a href="#contact" class="nav-link">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
