all are change to new lappy

--- a/data-analysis/pyspark.html
+++ b/data-analysis/pyspark.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hacktrix - Unlocking Data Potential</title>
-  <meta name="description" content="Explore the power of PySpark for big data processing and analytics. Learn how to unlock your data's potential with Hacktrix.">
+  <title>TechyVia - Unlocking Data Potential</title>
+  <meta name="description" content="Explore the power of PySpark for big data processing and analytics. Learn how to unlock your data's potential with TechyVia.">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
