--- a/data-analysis/scala.html
+++ b/data-analysis/scala.html
@@ -1243,5 +1243,12 @@ println(result)  // Output: 16</code></pre>
 <!-- Custom Script for Interactivity and Dynamic Effects -->
 <script src="script.js"></script>
 </div>
+<footer class="footer">
+    <p class="paragraph">Copyright 2023 TechyVia. All rights reserved.</p>
+  </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
+    
+  <script src="script.js"></script>
 </body>
 </html>
